--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ dependencies {
     runtimeOnly 'com.mysql:mysql-connector-j'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    testImplementation("org.assertj:assertj-core:3.22.0")
 }
 
 tasks.named('test') {
