--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,17 @@
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 application-setting.properties
 # User-specific stuff
-.idea/
+# IntelliJ IDEA 관련 파일
+.idea/MOMO_Project.iml
+.idea/compiler.xml
+.idea/dataSources.xml
+.idea/jarRepositories.xml
+.idea/material_theme_project_new.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/modules/newsfeed-project.main.iml
+.idea/vcs.xml
+
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/**/usage.statistics.xml
