--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Created by https://www.toptal.com/developers/gitignore/api/gradle,windows,git,intellij,java
 # Edit at https://www.toptal.com/developers/gitignore?templates=gradle,windows,git,intellij,java
-
+HELP.md
 ### Git ###
 # Created by git for backups. To disable backups in Git:
 # $ git config --global mergetool.keepBackup false
@@ -70,7 +70,8 @@ application-setting.properties
 # .idea/modules
 # *.iml
 # *.ipr
-
+*.iml
+*.ipr
 # CMake
 cmake-build-*/
 
@@ -182,7 +183,7 @@ ehthumbs_vista.db
 
 # Recycle Bin used on file shares
 $RECYCLE.BIN/
-
+bin/
 # Windows Installer files
 *.cab
 *.msi
@@ -197,7 +198,9 @@ $RECYCLE.BIN/
 .gradle
 **/build/
 !src/**/build/
-
+!**/src/main/**/out/
+!**/src/test/**/out/
+.settings
 # Ignore Gradle GUI config
 gradle-app.setting
 
@@ -215,9 +218,17 @@ gradle-app.setting
 .project
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
-
+.apt_generated
+.factorypath
+.springBeans
+.sts4-cache
 ### Gradle Patch ###
 # Java heap dump
 *.hprof
-
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+.vscode/
 # End of https://www.toptal.com/developers/gitignore/api/gradle,windows,git,intellij,java
